# Geant4Simulations

./: README.md
WCDsim/: CMakeLists.txt  action.hh  analysis.py  app.py  construction (dlwcd).txt  construction (dlwcd-bases).txt  construction (slwcd).txt  construction-petals.txt  construction.cc  construction.hh  construction_old.txt  dataSorting.py  detector.cc  detector.hh  event.cc  event.hh  generator.cc  generator.hh  physics.cc  physics.hh  run.cc  stepping.cc  stepping.hh
atmosphereSim/: CMakeCache.txt  CMakeLists.txt  Makefile  action.cc  action.hh  atmosphereSim  atmosphereSim.cc  cmake_install.cmake  construction.cc  construction.hh  detector.cc  generator.cc  generator.hh  run.hh  run.mac
atmosphereSim/data/: output1_nt_Photons_t0.csv  output2_nt_Photons_t1.csv  output2_nt_Scoring_t1.csv
cherenkovSim/: CMakeCache.txt  CMakeLists.txt  Makefile  action.cc  analysis.py  cherenkovSim  cherenkovSim.cc  cmake_install.cmake  construction.cc  detector.cc  generator.cc  generator.hh  physics.cc  physics.hh  run.cc
muonRingsSim/: CMakeCache.txt  CMakeLists.txt  Makefile  TIGS-v1.py  action.hh  analysis.py  app.py  cmake_install.cmake  construction.cc  construction.hh  existing_file.mac  generator.cc  generator.hh  muonRingsSim  muonRingsSim.cc  physics.cc  physics.hh  randomParticlePosition.mac  set.mac  vis.mac
scintillationSim/: CMakeCache.txt  CMakeLists.txt  Makefile  action.cc  action.hh  analysis.py  cmake_install.cmake  construction.cc  construction.hh  detector.hh  event.cc  generator.cc  movie.loop  movie.mac  physics.cc  run.cc  scintillationSim  (+2 more)
(+94 files in other folders)
